# flowcart

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 039107460e92_create_order_table.py  05d10722638c_make_cart_item_ids_foreign_keys.py  10a5f3d5a635_modify_product_models.py  1426ae9f1318_add_password_reset_token_and_expiry.py  1487a7e655f4_make_variants_delete_on_prroduct_delete.py  1627785bd9e1_add_index_constraints_to_product_media.py  16563a539d21_create_category_model.py  17b5af68c8d2_create_product_table.py  29099fa06656_add_is_admin_field_to_user_class.py  2d49559c3a11_create_order_items_table.py  2f2969c37d53_create_user_model.py  3baf68fc4ddb_adjust_promo_code_index.py  48492961468a_create_payment_table.py  4928ad6ec578_add_provider_info_to_media_model.py  4a714213d4a5_create_order_table.py  4bd7acce752a_add_webhook_event_table.py  4fe2be15ffa3_create_shippings_table.py  6354285357f5_add_verification_fields_to_user_model.py  68b6ee57c111_create_cart_table.py  6a4c3ef43fe5_add_category_fields_to_product_table.py  7211f474ca02_add_uploaded_at_field_to_productmedia_.py  7307cb37b81c_create_product_variant_table.py  8157ec9bbf0f_add_profile_fields_in_user_table.py  8a4c7bc31c31_create_cart_items_table.py  8a5d7e4db0b4_create_media_table.py  a0d0d8a9d1f3_add_session_id_to_order_model.py  a4abed9c4d40_add_unique_single_default_category_index.py  a631483fe943_create_product_media_table.py  ac0fd680ddbb_create_users_table.py  b037eff9b756_add_indexes_for_performance_to_product_.py  b08e8ba077c0_create_address_table.py  b1b63906e888_create_promo_code_table.py  ba6972dd8d0b_add_charge_id_and_refund_id_to_payment_.py  (+7 more)
app/: __init__.py  factory.py  main.py
(+176 files in other folders)
