[project]
name = "flowcart"
version = "0.1.0"
description = "A production-ready, modular e-commerce backend built with FastAPI, featuring JWT auth, role-based access, PostgreSQL, Alembic migrations, Dockerized setup, CI/CD automation, and testing with pytest."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "coverage>=7.10.7",
    "fastapi>=0.119.0",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.14.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.37.0",
]