[project]
name = "flowcart"
version = "0.1.0"
description = "A production-ready, modular e-commerce backend built with FastAPI, featuring JWT auth, role-based access, PostgreSQL, Alembic migrations, Dockerized setup, CI/CD automation, and testing with pytest."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "coverage>=7.10.7",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.2",
    "pytest>=8.4.2",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.14.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["E501"]  # Ignore line length in models
"tests/*.py" = ["E501"]  # Ignore line length in tests
"schemas/*.py" = ["E501"]  # Ignore line length in schemas
"alembic/versions/*.py" = ["E501"]  # Ignore line length in Alembic migration scripts

[tool.ruff.format]
exclude = ["app/models/*.py"]
